package app.domain.model;public class Sample {
}
